tests/purs/failing/ConstraintInference.out
Error found:
in module [33mMain[0m
at tests/purs/failing/ConstraintInference.purs:10:1 - 10:21 (line 10, column 1 - line 10, column 21)

  The inferred type
  [33m                                         [0m
  [33m  forall c8 t11. Show c8 => t11 -> String[0m
  [33m                                         [0m
  has type variables which are not determined by those mentioned in the body of the type:

    [33mc8[0m could not be determined

  Consider adding a type annotation.

in value declaration [33mtest[0m

See https://github.com/purescript/documentation/blob/master/errors/AmbiguousTypeVariables.md for more information,
or to contribute content related to this error.

